# taygete

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  LICENSE  README.md  conanfile.py
circuits/: adder-1bit.v  adder-tougaw-4bits-abc.v  adder-tougaw-4bits.v  xor.v
cmake/: colors.cmake  taygete-config.cmake.in
doc/character/: taygete-shocked.kra  taygete.kra
doc/mdbook/: book.toml
doc/mdbook/src/: SUMMARY.md
doc/mdbook/src/graph/: graph.md  methods.md
include/: CMakeLists.txt
include/taygete/: concepts.hpp  graph-reader.hpp  graph.hpp
include/taygete/graph/: example.hpp  graph.hpp  reader.hpp
test/: CMakeLists.txt  tests.cpp
test/include/taygete/: README.md  graph-reader.cpp  graph.cpp  reader.cpp
